--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 *{
   font-family: 'Poppins', sans-serif;
   font-family: 'Quicksand', sans-serif;
+  margin: 0;
 }
 body{
   background: linear-gradient(45deg, red,blue);
@@ -59,4 +60,14 @@ h1{
 }
 h2{
   color: white;
+}
+
+.footer{
+  position: fixed;  
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-image: linear-gradient(45deg, rgb(129, 0, 123),rgb(105, 0, 0));  
+  color: white;  
+  text-align: center;  
 }
