--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ code {
   border-radius: 30px;
   border: 0px;
   font-weight: bolder;
+  margin-top: 5px;
 }
 .btn:hover{
   cursor: pointer;
@@ -60,6 +61,7 @@ h1{
 }
 h2{
   color: white;
+  padding: 10px;
 }
 
 .footer{
